Fixes Bug #73913

The strrpos and strripos-functions where handling a negative offset in
a way that was different from strpos.

Especially negative offsets that where smaller than the length of the
needle caused illogical results.

This commit changes the way the negative offset is handled. A negative
offset will cause the haystack to be truncated of offset characters at
the end and after that the last occurrence of needle is looked for. That
is the bahaviour that is described in the manual and that is used in
strpos.

The fix caused several tests to break as they where testing for wrong
values. That means that this change IS a BC-break. But as the previous
results where not really consistent and in the most cases not what users
would expect that should not stop us from merging this into the next
release.