ext/standard/tests/strings/strripos_variation3.phpt
@@ -48,7 +48,7 @@ int(44)
 
 -- Multi line strings with +ve offsets -- 
 int(44)
-int(44)
+int(23)
 bool(false)
 
 -- Multi line strings with no offset -- 
